# WASP

./: README.md  spec.md
examples/wasp-host/: CMakeLists.txt  main.cpp  wasp_host.c
examples/wasp-host/include/: wasp_host.h
examples/wasp-sdk/: Cargo.toml  manifest.json  package.sh
examples/wasp-sdk/src/: lib.rs
wasp-host/: CMakeLists.txt  main.cpp  wasp_host.c
wasp-host/include/: ring_buffer.h  wasp_host.h
wasp-sdk/: Cargo.toml  package.sh
wasp-sdk/clipper/: manifest.json
wasp-sdk/synth/: Cargo.toml  manifest.json
wasp-sdk/synth/src/: lib.rs
